// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message should render correctly 1`] = `null`;

exports[`Message should render correctly 2`] = `
<div
  aria-hidden="true"
  class="md-text-field-message md-text-field-message--inactive"
>
  <span>
    Hello, World!
  </span>
</div>
`;

exports[`Message should render correctly 3`] = `
<div
  aria-hidden="false"
  class="md-text-field-message md-text-field-message--active"
>
  <span>
    Hello, World!
  </span>
</div>
`;
